prevent selected line from jumping when losing focus

--- a/Custom.less
+++ b/Custom.less
@@ -652,7 +652,7 @@
       opacity: 0.6 !important;
     }
     
-    .outline-disclosure ol:focus li{
+    .outline-disclosure ol li{
         line-height: 16px;
         &.selected{
             outline: 1px solid rgba(255, 255, 255, .1);
